--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section class="text-center mt-5" id="landing">
             <h1>Full Stack Web Developer</h1>
-            <p>Hi! My name is John Meddie Munoz and I love building this from scratch.</p>
+            <p>Hi! My name is  Munoz and I love building this from scratch.</p>
             <img src="images/image.png" id="profile" class="img-fluid">
             <a href="mailto:johnmeddiemariano@gmail.com" class="btn btn-success btn-lg mt-3">Let's Work Together</a>
         </section>
